feat(update contact node): add ability to delete contact by email; select - email or id, additional request if email

--- a/nodes/subscribers/klicktipp-subscriber-update.html
+++ b/nodes/subscribers/klicktipp-subscriber-update.html
@@ -7,12 +7,26 @@
 	    <label for="node-input-klicktipp"><i class="fa fa-cog"></i> <span>KlickTipp Config</span></label>
 	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
 	</div>
-	 <div class="form-row" style="display: flex;">
-	   <label for="node-input-subscriberId" style="margin-right: 4px;"><i class="fa fa-tags"></i> <span>Contact ID</span></label>
-	   <input type="text" id="node-input-subscriberId" placeholder="Enter contact ID (required)">
-	   <input type="hidden" id="node-input-subscriberIdType">
-	   <button id="btn-find-contact" type="button" style="margin-left: 4px;">Find Contact ID</button>
-	 </div>
+	<div class="form-row">
+		<label for="node-input-identifierType">
+			<i class="fa fa-question-circle"></i>
+			<span>Identify contact by</span>
+		</label>
+		<select id="node-input-identifierType" class="input-typed-select">
+			<option value="id">Contact ID</option>
+			<option value="email">Lookup email address</option>
+		</select>
+	</div>
+	<div class="form-row">
+		<label for="node-input-subscriberId"><i class="fa fa-tags""></i> <span>Contact ID</span></label>
+		<input type="text" id="node-input-subscriberId" placeholder="Enter contact ID (required)">
+		<input type="hidden" id="node-input-subscriberIdType">
+	</div>
+	<div class="form-row email-row"> 
+		<label for="node-input-lookupEmail"><i class="fa fa-search"></i> <span>Lookup email</span></label>
+		<input type="text" id="node-input-lookupEmail" placeholder="Enter lookup email (required)">
+		<input type="hidden" id="node-input-lookupEmailType">
+	</div>
 	<div class="form-row">
 	    <label for="node-input-newEmail"><i class="fa fa-envelope"></i> <span>Email Address</span></label>
 	    <input type="text" id="node-input-newEmail" placeholder="Enter email address">
@@ -29,19 +43,6 @@
 	    <input type="hidden" id="node-input-fieldsType">
 	</div>
 	<div id="contact-fields-section" class="form-row" style="display: none"></div>
-	<div id="find-contact-modal" title="Find Contact ID" style="display: none;">
-		<div class="form-row" style="display: flex; align-items: center;">
-			<label for="find-contact-email" style="padding-right: 8px; white-space: nowrap;">
-				<i class="fa fa-envelope"></i> <span>Email Address</span>
-			</label>
-			<input
-				type="text"
-				id="find-contact-email"
-				placeholder="Enter email address (required)"
-				style="flex: 1;"
-			/>
-		</div>
-	</div>
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp-subscriber-update">
@@ -53,7 +54,9 @@
 	    <dd>
 	        Expected object with the following properties:
 	        <ul>
-	            <li><code>subscriberId</code> - (Required) the contact's ID</li>
+							<li><code>identifierType</code> - <code>"id"</code> | <code>"email"</code></li>
+							<li><code>subscriberId</code> - required when <code>identifierType="id"</code></li>
+							<li><code>lookupEmail</code> - required when <code>identifierType="email"</code></li>
 	            <li><code>fields</code> - (Optional) an object with data fields (e.g., first name, last name, address, etc.),
 	            structured as returned by the <code>Field index</code> node</li>
 	            <li><code>newEmail</code> - (Optional) the contact's new email address</li>
@@ -95,14 +98,20 @@
 		color: '#DAE1FC',
 		defaults: {
 			klicktipp: { type: 'klicktipp-config', required: true },
+			identifierType: { value: 'id' },
 			subscriberId: {
-				required: true,
+				required: false,
 				value: 'payload.subscriberId',
 				validate: RED.validators.typedInput('subscriberIdType'),
 			},
 			subscriberIdType: {
 				value: 'msg',
 			},
+			lookupEmail: {
+				value: 'payload.lookupEmail', required: false,
+				validate: RED.validators.typedInput('lookupEmailType')
+			},
+			lookupEmailType: { value: 'msg' },
 			newEmail: {
 				value: 'payload.newEmail',
 				validate: RED.validators.typedInput('newEmailType'),
@@ -146,13 +155,11 @@
 			ktPopulateConfig(this);
 		},
 		oneditprepare: function () {
-			const klicktippInput = $('#node-input-klicktipp');
-			this.contactFieldsSection = $('#contact-fields-section');
-			const fieldsInput = $('#node-input-fields');
-
-			ktInitializeTypedInput('#node-input-subscriberId', '#node-input-subscriberIdType', 'num', [
-				'num',
-			]);
+			const node = this;
+			ktInitializeTypedInput('#node-input-subscriberId', '#node-input-subscriberIdType',
+				'num', ['num', 'msg', 'flow', 'global']);
+			ktInitializeTypedInput('#node-input-lookupEmail', '#node-input-lookupEmailType',
+				'str', ['str', 'msg', 'flow', 'global']);
 			ktInitializeTypedInput('#node-input-newEmail', '#node-input-newEmailType', 'str', ['str']);
 			ktInitializeTypedInput('#node-input-newSmsNumber', '#node-input-newSmsNumberType', 'str', [
 				'str',
@@ -161,6 +168,24 @@
 				'json',
 				KT_CUSTOM_CONTACT_FIELDS_TYPE,
 			]);
+
+			// rows to toggle
+			const idRow = $('#node-input-subscriberId').closest('.form-row');
+			const emailRow = $('#node-input-lookupEmail').closest('.form-row');
+
+			function toggleRows() {
+				const mode = $('#node-input-identifierType').val() || 'id';
+				idRow.toggle(mode === 'id');
+				emailRow.toggle(mode === 'email');
+			}
+
+			$('#node-input-identifierType').val(node.identifierType || 'id');
+			$('#node-input-identifierType').on('change', toggleRows);
+			toggleRows();
+
+			const klicktippInput = $('#node-input-klicktipp');
+			this.contactFieldsSection = $('#contact-fields-section');
+			const fieldsInput = $('#node-input-fields');
 
 			// Initialize the contact fields section logic
 			ktInitializeContactFieldsSection(
@@ -179,76 +204,6 @@
 				this.fieldsData,
 				this.id,
 			);
-
-			const $findModal = $('#find-contact-modal').dialog({
-				autoOpen: false,
-				modal: true,
-				title: 'Find Contact ID',
-				width: 400,
-				buttons: {
-					OK: function () {
-						const email = $findModal.find('#find-contact-email').val().trim();
-						if (!email) {
-							RED.notify('Please enter an email address', 'error');
-							return;
-						}
-						const configId = $('#node-input-klicktipp').val();
-						if (!configId) {
-							RED.notify('Missing KlickTipp Config', 'error');
-							return;
-						}
-
-						$.ajax({
-							url: '/klicktipp/contactSearch?configId=' + encodeURIComponent(configId),
-							method: 'POST',
-							dataType: 'json',
-							data: { email },
-							success: function (response) {
-								if (response && response[0]) {
-									const id = response[0];
-									$('#node-input-subscriberIdType').val('num');
-									const $old = $('#node-input-subscriberId');
-									const $new = $(
-										'<input type="text" id="node-input-subscriberId" ' +
-										'placeholder="Enter contact ID (required)" value="' +
-										id +
-										'" style="width:216px;">',
-									);
-									$old.replaceWith($new);
-									ktInitializeTypedInput(
-										'#node-input-subscriberId',
-										'#node-input-subscriberIdType',
-										'num',
-										['num'],
-									);
-									$new.trigger('change');
-									$findModal.dialog('close');
-								} else {
-									RED.notify('Contact not found', 'error');
-								}
-							},
-							error: function (err) {
-								const msg =
-									(err.responseJSON && err.responseJSON.error) ||
-									err.responseText ||
-									err.statusText;
-								RED.notify(msg, 'error');
-							},
-						});
-					},
-					Cancel: function () {
-						$findModal.dialog('close');
-					},
-				},
-				close: function () {
-					// clear input each time it closes
-					$findModal.find('#find-contact-email').val('');
-				},
-			});
-
-			$('#btn-find-contact').click(function () {
-				$findModal.dialog('open');
-			});
 		},
 		oneditcancel: function () {
 			$(document).off('.kt-dd');      // removes keydown.kt-dd and mousedown.kt-dd
