--- a/nodes/subscribers/klicktipp-subscriber-update.html
+++ b/nodes/subscribers/klicktipp-subscriber-update.html
@@ -10,11 +10,11 @@
 	<div class="form-row">
 		<label for="node-input-identifierType">
 			<i class="fa fa-question-circle"></i>
-			<span>Identify contact by</span>
+			<span>Identify Contact By</span>
 		</label>
 		<select id="node-input-identifierType" class="input-typed-select">
 			<option value="id">Contact ID</option>
-			<option value="email">Lookup email address</option>
+			<option value="email">Email Address</option>
 		</select>
 	</div>
 	<div class="form-row">
@@ -23,12 +23,12 @@
 		<input type="hidden" id="node-input-subscriberIdType">
 	</div>
 	<div class="form-row email-row"> 
-		<label for="node-input-lookupEmail"><i class="fa fa-search"></i> <span>Lookup email</span></label>
-		<input type="text" id="node-input-lookupEmail" placeholder="Enter lookup email (required)">
+		<label for="node-input-lookupEmail"><i class="fa fa-search"></i> <span>Email Address</span></label>
+		<input type="text" id="node-input-lookupEmail" placeholder="Enter email address (required)">
 		<input type="hidden" id="node-input-lookupEmailType">
 	</div>
 	<div class="form-row">
-	    <label for="node-input-newEmail"><i class="fa fa-envelope"></i> <span>Email Address</span></label>
+	    <label for="node-input-newEmail"><i class="fa fa-envelope"></i> <span>New Email Address</span></label>
 	    <input type="text" id="node-input-newEmail" placeholder="Enter email address">
 	    <input type="hidden" id="node-input-newEmailType">
 	</div>
