feat(trigger): change description

--- a/nodes/triggers/klicktipp-webhook-trigger.html
+++ b/nodes/triggers/klicktipp-webhook-trigger.html
@@ -25,10 +25,7 @@
 
 <script type="text/x-red" data-help-name="klicktipp-webhook-trigger">
 	<p>
-	    This node acts as a trigger for new events from KlickTipp via webhook.
-	    When deployed, it automatically generates a unique webhook URL.
-	    Configure this URL in your KlickTipp account so that when the webhook is triggered,
-	    the incoming data is sent to Node-RED.
+		Triggers when a webhook event occurs in KlickTipp, such as a tag being added, an email being opened or sent, a link clicked, an SMS sent, and more.
 	</p>
 	<h3>Outputs</h3>
 	<dl class="message-properties">
