feat(nodes wording): change title and description

--- a/nodes/subscribers/klicktipp-subscriber-search.html
+++ b/nodes/subscribers/klicktipp-subscriber-search.html
@@ -75,10 +75,10 @@
 		outputs: 1,
 		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Get Contact ID';
+			return this.name || 'Search Contact ID';
 		},
 		labelStyle: 'klicktipp_label_style',
-		paletteLabel: 'Get Contact ID',
+		paletteLabel: 'Search Contact ID',
 		onadd: function () {
 			ktPopulateConfig(this);
 		},
