--- a/nodes/subscription-processes/klicktipp-subscription-process-get-redirect.html
+++ b/nodes/subscription-processes/klicktipp-subscription-process-get-redirect.html
@@ -34,7 +34,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp-subscription-process-get-redirect">
-	<p>Gets the redirection URL for a specific opt-in process</p>
+	<p>Search the redirection URL for a specific opt-in process</p>
 	<h3>Inputs</h3>
 	<dl class="message-properties">
 	  <dt>msg.payload <span class="property-type">object</span></dt>
@@ -92,10 +92,10 @@
 		outputs: 1,
 		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Get Redirect URL';
+			return this.name || 'Search Redirect URL';
 		},
 		labelStyle: 'klicktipp_label_style',
-		paletteLabel: 'Get Redirect URL',
+		paletteLabel: 'Search Redirect URL',
 		onadd: function () {
 			ktPopulateConfig(this);
 		},
