fix(get contact): fix display color of inputs in doc

--- a/nodes/subscribers/klicktipp-subscriber-get.html
+++ b/nodes/subscribers/klicktipp-subscriber-get.html
@@ -37,6 +37,7 @@
 	<p>Returns the complete data of a contact</p>
 
 	<h3>Inputs</h3>
+	<dl class="message-properties">
     <dt>msg.identifierType <span class="property-type">string</span></dt>
 		<dd>
 			How the contact should be found:
