feat(get/update/delete contact): make email as default value in select

--- a/nodes/subscribers/klicktipp-subscriber-delete.html
+++ b/nodes/subscribers/klicktipp-subscriber-delete.html
@@ -96,7 +96,7 @@
 			klicktipp: { type: 'klicktipp-config', required: true },
 
 			/* dropdown: id | email */
-			identifierType: { value: 'id' },
+			identifierType: { value: 'email' },
 
 			/* ► Contact-ID ----------------------------------------- */
 			subscriberId: {
