--- a/nodes/subscribers/klicktipp-subscriber-get.html
+++ b/nodes/subscribers/klicktipp-subscriber-get.html
@@ -93,7 +93,7 @@
 			klicktipp: { type: 'klicktipp-config', required: true },
 
 			/* dropdown: id | email */
-			identifierType: { value: 'id' },
+			identifierType: { value: 'email' },
 
 			/* ► Contact-ID ----------------------------------------- */
 			subscriberId: {
