--- a/nodes/subscribers/klicktipp-subscriber-update.html
+++ b/nodes/subscribers/klicktipp-subscriber-update.html
@@ -106,7 +106,7 @@
 		color: '#DAE1FC',
 		defaults: {
 			klicktipp: { type: 'klicktipp-config', required: true },
-			identifierType: { value: 'id' },
+			identifierType: { value: 'email' },
 			subscriberId: {
 				required: false,
 				value: 'payload.subscriberId',
