--- a/nodes/subscribers/klicktipp-subscriber-subscribe.html
+++ b/nodes/subscribers/klicktipp-subscriber-subscribe.html
@@ -174,6 +174,8 @@
 			ktInitializeContactFieldsSection(fieldsInput, this.contactFieldsSection, klicktippInput, this.fieldsData, this.id);
 			ktInitializeUserSelectHandler(klicktippInput, '#node-input-fieldsType', this.contactFieldsSection, this.fieldsData, this.id);
 
+			this.__cleanupCreateModal = () => { };
+
 			/* listId dual input */
 			function updateListDisplay() {
 				const isManual = self.manualListEnabled === true || self.manualListEnabled === 'true';
@@ -367,12 +369,12 @@
 		},
 
 		oneditcancel: function () {
-			if (typeof this.__cleanupCreateModal === 'function') this.__cleanupCreateModal();
+			this.__cleanupCreateModal();
 			$(document).off('.kt-dd');
 		},
 
 		oneditsave: function () {
-			if (typeof this.__cleanupCreateModal === 'function') this.__cleanupCreateModal();
+			this.__cleanupCreateModal();
 			$(document).off('.kt-dd');
 
 			ktSaveDualInput($('#node-input-listId'), $('#node-input-listIdManual'), $('#node-input-toggleListId'),
